# FileEditor

./: CMakeLists.txt  FileClass.cpp  FileClass.h  README.md  file.txt  file5.txt  main.cpp  mode.cpp  mode.h  platformUnix.cpp  platformWindows.cpp
